--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Етрос</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/images/favicon-32x32.png" type="image/png">
 </head>
 <body>
     <header>
